# k-space

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  customdoxygen.css
.github/: release.yml
.github/workflows/: gen-docs.yml  linux-build.yml
docs/: _haldane_8cpp-example.html  _haldane_fixed_8cpp-example.html  annotated.html  approx_8hpp.html  approx_8hpp_source.html  classes.html  core_8hpp.html  core_8hpp_source.html  dir_919b91d53b27d7e6df05f777d27efdcc.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  examples.html  files.html  group__approx.html  group__complex.html  group__integration.html  group__io.html  group__isoline.html  group__iterator.html  group__linalg.html  group__math.html  group__math__constants.html  group__math__functions.html  group__matrix.html  group__numeric.html  group__physics.html  group__range.html  group__utility.html  haldane_8cpp-example.html  haldane_fixed_8cpp-example.html  hermitian_8cpp-example.html  hierarchy.html  index.html  integration_8cpp-example.html  integration_8hpp.html  integration_8hpp_source.html  iso2d_8hpp.html  iso2d_8hpp_source.html  kspc_8hpp.html  kspc_8hpp_source.html  (+157 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+38 more)
examples/: Haldane.cpp  Haldane_fixed.cpp  Hermitian.cpp  haldane.cpp  haldane_fixed.cpp  hermitian.cpp  integration.cpp  isoline.cpp  primitive-cubic.cpp
include/: CMakeLists.txt
include/kspc/: approx.hpp  core.hpp  integration.hpp  iso2d.hpp  kspc.hpp  linalg.hpp  math.hpp  math_basics.hpp  numeric.hpp  ranges.hpp
test/: Haldane.cpp  Haldane_fixed.cpp  Untitled-1.cpp
tests/: CMakeLists.txt  Untitled-1.cpp
tests/control/: CMakeLists.txt  control.cpp
tests/linalg/: CMakeLists.txt  linalg.cpp
tests/math/: CMakeLists.txt  math.cpp
tests/ranges/: CMakeLists.txt  ranges.cpp
